<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="category_2">Portrait</string>
	<string name="category_3">Nature</string>
	<string name="category_4">Still Life</string>
	<string name="category_5">Macro</string>
	<string name="category_6">Travels</string>
	<string name="category_7">Urban</string>
	<string name="category_8">Animals</string>
	<string name="category_9">Reportage</string>
	<string name="category_10">Sport</string>
	<string name="category_11">Humor</string>
	<string name="category_12">Genre</string>
	<string name="category_13">Museum</string>
	<string name="category_14">Digital Art</string>
	<string name="category_15">Nu</string>
	<string name="category_16">Other</string>
	<string name="category_17">Photosight</string>
	<string name="category_18">Glamour</string>
	<string name="category_19">Advertising</string>
	<string name="category_27">Paparazzi</string>
	<string name="category_36">Landscape</string>
	<string name="category_64">Photo Hunt</string>
	<string name="category_65">Undersea World</string>
	<string name="category_70">Genre Portrait</string>
	<string name="category_78">Mobile</string>
	<string name="category_80">Kids World</string>
	<string name="category_82">Architecture and Interior</string>
	<string name="category_87">Photo Models</string>
	<string name="category_91">Wedding</string>
	<string name="category_92">Techno</string>

	<string-array name="ratings_array">
		<item>@string/rating_day</item>
		<item>@string/rating_week</item>
		<item>@string/rating_month</item>
		<item>@string/rating_best</item>
		<item>@string/rating_artistic</item>
		<item>@string/rating_original</item>
		<item>@string/rating_technic</item>
		<item>@string/rating_favorites</item>
		<item>@string/rating_applicants</item>
		<item>@string/rating_outrun</item>
	</string-array>

	<string name="rating_day">Day</string>
	<string name="rating_week">Week</string>
	<string name="rating_month">Month</string>
	<string name="rating_best">Best</string>
	<string name="rating_artistic">Artistry</string>
	<string name="rating_original">Originality</string>
	<string name="rating_technic">Technique</string>
	<string name="rating_favorites">Favorites</string>
	<string name="rating_applicants">Applicants</string>
	<string name="rating_outrun">Outrun</string>

    <string name="thin_font" translatable="false">sans-serif-light</string>
    <string name="light_font" translatable="false">sans-serif</string>

	<string name="changelog" translatable="false">"
Change Log:

v1.0
- the app has been rewritten from scratch

v0.9
- Comments fix

v0.8.3
- Bugfixes

v0.8.1
- Fixed landscape orientation bug

v0.8
- Bugfixes
- Increased photos quality
- Adware removed
- Sources published on GitHub https://github.com/deviant-studio/PhotosightGallery

v0.7
- Histogram
- Better zooming/panning behavior

v0.6
- Photo rates and awards
- bugfixes

v0.51
- Restored custom cache path
- unexpected gallery scroll fix

v0.5
- Comments
- various bugfixes

v0.42
- Hot fix

v0.41
- Added title text in landscape mode

v0.40
- Back to life!

v0.35
- Fixed ICS+ visual bugs

v0.34
- Performance improvements

v0.33
- Android 2.1 fixes

v0.32
- fix #2

v0.3
- Set photo as wallpaper or contact
- Add Outrun category
- bugfixes and improvements

v0.21
- bugfixes

v0.2
- Add photo info dialog
- Add rescaling photos option (for low-end devices)
- Bugfixes and optimizations

v0.1
- Initial release
"
	</string>
	<string name="abouttext">"Photosight.ru is a photographic community of talented photographers mostly from Europe. You can find there daily updated archive of creative artistic photos or share your own.
Photosight Gallery is an easy way to browse photos from photosight.ru on your Android device.

Please e-mail bugreports:
deviantstudio.software@gmail.com

%1$s

"</string>
	<string name="app_name" translatable="false">Photosight Gallery</string>
	<string name="categories">Categories</string>
	<string name="ratings">Ratings</string>
	<string name="share_subj">Check this out!</string>
	<string name="share_text">Sent from Photosight Gallery</string>
	<string name="loading">Loading…</string>
	<string name="share">Share</string>
	<string name="share_link">Share URL</string>
	<string name="share_img">Share Image</string>
	<string name="photosight">PHOTO.SIGHT</string>
	<string name="activity_name">Photosight Gallery</string>
	<string name="clearing_the_cache">Clearing the cache</string>
	<string name="clearing_notify">Make take few minutes…</string>
	<string name="saved_to_">"Saved to "</string>
	<string name="failed">Failed</string>
	<string name="loading_next_page">Loading Next Page</string>
	<string name="page_">"page "</string>
	<string name="photo_">"photo "</string>
	<string name="top_in">"Top of the "</string>
	<string name="no_photos_try_next_page_">No photos. Try next page.</string>
	<string name="connection_error">Connection Error</string>
	<string name="sort_by_">Sort by…</string>
	<string name="disabled">Disabled</string>
	<string name="recommendations">Recommendations</string>

	<string name="open_in_web_browser">Open in Browser</string>
	<string name="detailed_info_">Detailed Info…</string>
	<string name="save_to_sd">Save to SD</string>
	<string name="info_">Info…</string>
	<string name="settings">Settings</string>
	<string name="refresh">Refresh</string>
	<string name="share_app_subj">You should check out this app!</string>
	<string name="share_app_text">Photosight Gallery is a client of the largest online gallery of art photography in Europe, photosight.ru</string>
	<string name="do_you_want_to_clear_the_cache_now_">Do you want to clear the cache now?</string>
	<string name="coming_soon">Coming Soon!</string>
	<string name="title">Title</string>
	<string name="author">Author</string>
	<string name="date">Date</string>
	<string name="award">Award</string>
	<string name="denied_by_parental_control">Denied by Parental Control</string>
	<string name="set_as">Set as…</string>
	<string name="drawer_open" translatable="false">Open Comments</string>
    <string name="drawer_close" translatable="false">Close Comments</string>
    <string name="photo_author">"&lt;AUTHOR&gt;"</string>
	<string name="persistence">Persistence</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="processing">Processing…</string>
    <string name="histogram">Histogram</string>
	<string name="copyright" translatable="false">© 1997-2020 Deviant Studio</string>
	<string name="about_title_" translatable="false">"PHOTOSIGHT GALLERY "</string>

	<string name="retry">Retry</string>
    <string name="views">Views</string>


</resources>
