<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/im_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/im_share_link"
                android:title="@string/share_link"
                app:showAsAction="never" />
            <item
                android:id="@+id/im_share_img"
                android:title="@string/share_img"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/im_save_sdcard"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save_to_sd"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/im_info"
        android:icon="@drawable/ic_action_histogram"
        android:title="@string/histogram"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/im_wallpaper"
        android:icon="@drawable/ic_action_picture"
        android:title="@string/set_as"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/im_open_in_browser"
        android:icon="@drawable/ic_action_web"
        android:title="@string/open_in_web_browser"
        app:showAsAction="ifRoom" />

</menu>
